@@ -1,3 +1,9 @@
+2004-11-05  Beckett Madden-Woods  <beckett@beckettmw.com> 1.5-cvs-b263
+
+	* captionator.php: fix photos-per-page count to work with
+	  register_globals off, and also when linked to from
+	  albums.php
+
 2004-11-04  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b262
 
 	* Text: Update the Mambo HowTo.txt
